Ram1123 dev improve (#6)
* Removed plots

* Updated to custom-bins

* Added script to fetch SF to JSON file

* Working version of z-pt weight extractor from .root files to json file

* final SF extraction to json using correctionlib

* Cutflow addition using coffea cutflow method

* removed added png file

* Update running version of z-pt code #6

* Improvemetn of z-pt weight extractor: #6

* Updated 2016post zpt

* Running version of new zpt weight for 2016postVPF

* minor update or missing files

* - Updated the way we are reading input dataset in the pre-stage.py.
- Updated the file name of pre-stage output json file and propagated to the stage1.
- Cleaned part of stage1
- Added two separate yaml file having v9 adn v12 dataset names
- Updated logger with rich
- Updated copperhead_processor adapting with three functions for 2016postVFP.
- Replaced print statements with logger.
- Refactor zpt_validation_plotter.py to improve logging and update save path

- Updated default save path for plots to include 'UsingAcoplanarityWgt_CustomBins'.
- Enhanced error handling and logging for missing variables and unknown processes.

* - Added script to locate the files having the LZMA error #8
- updated logger in prestage and stage1
- Updated sample lists in nanoAODv12

* Just logger update

* added scripts for LZMA error handling #8

- Updated dataset paths for 2018 in dataset_nanoAODv12.yaml.
- Added files_to_delete.py to locate and remove files causing LZMA errors.
- Introduced main_script_dask_to_run_cppProgram.py find run the script `muon_pt_reader.C` that tries to find files having LZMA issue
-  muon_pt_reader.C for reading muon pT from ROOT files this helps to find the files having LZMA issue.

* update docs and zpt reweight code

* Updated 2018 Z-pt weights and propagated the info to copperhead #6

* Minor improvements to the Z-pt code

* BUGFIX: fix the bugs introduced by the merge conflict. Also, checked the cut-flow table for data and it is identical between my branch

--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -3,11 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username: yun79\n"
+     ]
+    }
+   ],
+   "source": [
+    "username = os.environ.get(\"USER\") or os.environ.get(\"USERNAME\")\n",
+    "if username:\n",
+    "    print(f\"Username: {username}\")\n",
+    "else:\n",
+    "    print(\"Username not found in environment variables.\")\n",
+    "    sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PWD: /work/users/yun79/Run3/copperheadV2\n",
+      ":/work/users/yun79/Run3/copperheadV2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "cwd = str(Path.cwd())\n",
+    "print(f\"PWD: {cwd}\")\n",
+    "os.environ[\"PYTHONPATH\"] += f\":{cwd}\"\n",
+    "os.environ[\"X509_USER_PROXY\"] = f\"{cwd}/voms_proxy.txt\"\n",
+    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
+    "!echo $PYTHONPATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from dask_gateway import Gateway\n",
     "# gateway = Gateway()\n",
     "gateway = Gateway(\n",
@@ -18,7 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "b2eb73e1-4c0e-476d-864e-f781b0a331bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cluster_info in gateway.list_clusters():\n",
+    "    print(cluster_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -29,9 +97,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/depot/cms/kernels/coffea_latest/lib/python3.12/site-packages/dask_gateway/client.py:702: GatewayWarning: Adapt with `maximum=499, minimum=3` workers would exceed resource limit of 88 workers. Using `maximum=88, minimum=3` instead.\n",
+      "  warnings.warn(GatewayWarning(msg[\"msg\"]))\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "862f1063c8c746d2b6a72c933092246c",
+       "model_id": "b5653ea21f1f42eebc2aab180b008001",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,48 +120,36 @@
     }
    ],
    "source": [
-    "os.environ[\"X509_USER_PROXY\"] = \"/depot/cms/users/yun79/x509up_u383571\"\n",
-    "os.environ[\"PYTHONPATH\"] += \":/work/users/yun79/valerie/fork/copperheadV2\"\n",
-    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
     "cluster = gateway.new_cluster(\n",
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    # conda_env = \"/depot/cms/kernels/root632\",\n",
-    "    conda_env = \"/depot/cms/users/yun79/conda_envs/coffea_prototype\",\n",
-    "    worker_cores = 1, #1\n",
-    "    worker_memory = 5, #6\n",
+    "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
+    "    conda_env = \"/depot/cms/users/yun79/conda_envs/yun_coffea_latest\",\n",
+    "    worker_cores = 1, #2\n",
+    "    worker_memory = 6, #6\n",
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
-    "# cluster.adapt(100) \n",
-    "cluster.adapt(minimum=25, maximum=100)\n",
-    "cluster"
+    "cluster.adapt(minimum=3, maximum=499) # 399 for low resources, otherwise 199\n",
+    "cluster\n",
+    "# cluster.adapt(100) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2ff0a848-13af-4176-8b20-fd6c4e53c3f3",
+   "execution_count": null,
+   "id": "d6fc0cd8-29ba-4552-b3e4-e81539318878",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/depot/cms/private/users/yun79/valerie/fork/copperheadV2'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.environ['PWD']"
+    "for cluster_info in gateway.list_clusters():\n",
+    "    print(cluster_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7509afd5-e613-4dad-99f0-ebcda0453090",
+   "execution_count": 7,
+   "id": "94ab7961-ec12-4a2e-843e-c27d6ecd6c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "3d015374-9431-4718-9eb3-a37a00bb367f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cluster_info in gateway.list_clusters():\n",
+    "    print(cluster_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
    "metadata": {},
    "outputs": [],
@@ -117,42 +192,23 @@
    "outputs": [],
    "source": [
     "# options.worker_cores\n",
-    "options.fields"
+    "print(options)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e627d976-e8ae-4d2f-974a-757ea14acf87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! squeue -u yun79"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3d015374-9431-4718-9eb3-a37a00bb367f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "':/depot/cms/purdue-af/lhapdf/lib/python3.10/site-packages'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf00be45-2c6c-4572-8223-3fb8b7d6da5b",
+   "id": "e627d976-e8ae-4d2f-974a-757ea14acf87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! squeue -u shar1172"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6342ed65-d893-453b-be19-c7eee90fa848",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,9 +216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea_prototype]",
+   "display_name": "coffea_latest",
    "language": "python",
-   "name": "conda-env-coffea_prototype-py"
+   "name": "coffea_latest"
   },
   "language_info": {
    "codemirror_mode": {
@@ -174,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
