--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "79fcd8c1-2264-45ac-bf9d-58da85349dba",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "78e6564b-e289-4d3d-9270-13da79dd0c91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Username: yun79\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "username = os.environ.get(\"USER\") or os.environ.get(\"USERNAME\")\n",
     "if username:\n",
@@ -35,19 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ec0b7c8d-2157-476b-bf16-8c3f36a36997",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PWD: /work/users/yun79/Run3/copperheadV2\n",
-      ":/work/users/yun79/Run3/copperheadV2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "cwd = str(Path.cwd())\n",
@@ -60,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "275494e4-3a0f-4d26-aafe-8abd771df5b4",
    "metadata": {},
    "outputs": [],
@@ -75,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b2eb73e1-4c0e-476d-864e-f781b0a331bc",
    "metadata": {},
    "outputs": [],
@@ -86,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c1a51702-2fab-4bd6-a4f0-22cf289d5948",
    "metadata": {
     "editable": true,
@@ -95,38 +78,15 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/kernels/coffea_latest/lib/python3.12/site-packages/dask_gateway/client.py:702: GatewayWarning: Adapt with `maximum=499, minimum=3` workers would exceed resource limit of 88 workers. Using `maximum=88, minimum=3` instead.\n",
-      "  warnings.warn(GatewayWarning(msg[\"msg\"]))\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5653ea21f1f42eebc2aab180b008001",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h2>GatewayCluster</h2>'), HBox(children=(HTML(value='\\n<div>\\n<style scoped>\\n    …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cluster = gateway.new_cluster(\n",
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    # conda_env = \"/depot/cms/kernels/root632\",\n",
     "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
     "    conda_env = \"/depot/cms/users/yun79/conda_envs/yun_coffea_latest\",\n",
-    "    worker_cores = 1, #2\n",
-    "    worker_memory = 6, #6\n",
+    "    worker_cores = 2, #2\n",
+    "    worker_memory = 10, #6\n",
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
@@ -148,7 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "306107ed-0b83-4cee-86b9-c1ef247ef1ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cluster_info in gateway.list_clusters():\n",
+    "    # print(cluster_info.name)\n",
+    "    # if \"aa072b58804d41119254e8a33652223c\" not in cluster_info.name:\n",
+    "    if \"dac3e4199e64482ab41b6e9bb42c1d4a\" in cluster_info.name:\n",
+    "        print(cluster_info.name)\n",
+    "        gateway.connect(cluster_info.name).shutdown()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "94ab7961-ec12-4a2e-843e-c27d6ecd6c0f",
    "metadata": {},
    "outputs": [],
