--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -49,11 +49,11 @@
    "outputs": [],
    "source": [
     "from dask_gateway import Gateway\n",
-    "# gateway = Gateway()\n",
+    "# gateway = Gateway() # For SLURM backend\n",
     "gateway = Gateway(\n",
     "    \"http://dask-gateway-k8s.geddes.rcac.purdue.edu/\",\n",
     "    proxy_address=\"traefik-dask-gateway-k8s.cms.geddes.rcac.purdue.edu:8786\",\n",
-    ")"
+    ") # For KUBERNET backend"
    ]
   },
   {
@@ -90,7 +90,7 @@
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
-    "cluster.adapt(minimum=3, maximum=499) # 399 for low resources, otherwise 199\n",
+    "cluster.adapt(minimum=25, maximum=399) # 399 for low resources, otherwise 199\n",
     "cluster\n",
     "# cluster.adapt(100)"
    ]
@@ -113,10 +113,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ClusterID_ToShutdown = \"dd7659b707d34e33a0506fbdb6593a3d\"\n",
     "for cluster_info in gateway.list_clusters():\n",
     "    # print(cluster_info.name)\n",
-    "    # if \"aa072b58804d41119254e8a33652223c\" not in cluster_info.name:\n",
-    "    if \"dac3e4199e64482ab41b6e9bb42c1d4a\" in cluster_info.name:\n",
+    "    if ClusterID_ToShutdown in cluster_info.name:\n",
     "        print(cluster_info.name)\n",
     "        gateway.connect(cluster_info.name).shutdown()\n"
    ]
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ab7961-ec12-4a2e-843e-c27d6ecd6c0f",
+   "id": "4001942e-7f41-4578-9236-33ab00edffe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,45 +148,6 @@
     "for cluster_info in gateway.list_clusters():\n",
     "    print(cluster_info)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61b1a67a-53d2-4837-b5c4-2fd124dd128f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "options = gateway.cluster_options()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "add5c117-7590-4546-8fe6-239cab13dd36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# options.worker_cores\n",
-    "print(options)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e627d976-e8ae-4d2f-974a-757ea14acf87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! squeue -u shar1172"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6342ed65-d893-453b-be19-c7eee90fa848",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -205,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
