--- a/quick_tests/get_yields.ipynb
+++ b/quick_tests/get_yields.ipynb
@@ -700,9 +700,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea_latest]",
+   "display_name": "coffea_latest",
    "language": "python",
-   "name": "conda-env-coffea_latest-py"
+   "name": "coffea_latest"
   },
   "language_info": {
    "codemirror_mode": {
@@ -714,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
