--- a/GetYields_New.ipynb
+++ b/GetYields_New.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules import selection"
+    "from modules import selection_debug"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "    # print(f\"file: {file}\")\n",
     "    events_data = dak.from_parquet(f\"{file}/*/*.parquet\")\n",
     "    events_data = ak.zip({field: events_data[field] for field in V1_fields_2compute}).compute()\n",
-    "    events_data = selection.applyRegionCatCuts(events_data, category=category, region_name=region, process=process, variation=\"nominal\", do_vbf_filter_study=False)\n",
+    "    events_data = selection_debug.applyRegionCatCuts(events_data, category=category, region_name=region, process=process, variation=\"nominal\", do_vbf_filter_study=False)\n",
     "\n",
     "    wgts = ak.fill_none(events_data.wgt_nominal, value=1.0)\n",
     "    data_yield = ak.sum(wgts)\n",
@@ -146,7 +146,7 @@
     "        # print(f\"\\tfile: {file}\")\n",
     "        events_data = dak.from_parquet(f\"{file}/*/*.parquet\")\n",
     "        events_data = ak.zip({field: events_data[field] for field in fields}).compute()\n",
-    "        events_data = selection.applyRegionCatCuts(events_data, category=category, region_name=region, process=process, variation=\"nominal\", do_vbf_filter_study=do_vbf_filter_study)\n",
+    "        events_data = selection_debug.applyRegionCatCuts(events_data, category=category, region_name=region, process=process, variation=\"nominal\", do_vbf_filter_study=do_vbf_filter_study)\n",
     "\n",
     "        wgts = ak.fill_none(events_data.wgt_nominal, value=1.0)\n",
     "        data_yield = ak.sum(wgts)\n",
@@ -171,49 +171,132 @@
       "\n",
       "\n",
       "***** 2018 *****\n",
-      "===== data* =====\n",
-      "\tdata_yield for data_C: 339.0\n",
-      "\tdata_yield for data_A: 773.0\n",
-      "\tdata_yield for data_B: 386.0\n",
-      "\tdata_yield for data_D: 1557.0\n",
-      "\t==> Total Yield: 3055.000\n",
       "===== vbf_powheg_dipole =====\n",
       "\tdata_yield for vbf_powheg_dipole: 0.14962994221889378\n",
       "\t==> Total Yield: 0.150\n",
       "===== ggh_powhegPS =====\n",
       "\tdata_yield for ggh_powhegPS: 0.1175762412861803\n",
-      "\t==> Total Yield: 0.118\n"
+      "\t==> Total Yield: 0.118\n",
+      "===== dy_VBF_filter =====\n",
+      "\tdata_yield for dy_VBF_filter: 1562.321514394488\n",
+      "\t==> Total Yield: 1562.322\n",
+      "===== dy_M*_MiNNLO =====\n",
+      "\tdata_yield for dy_M-100To200_MiNNLO: 1092.038927781491\n",
+      "\tdata_yield for dy_M-50_MiNNLO: 17.348819956595282\n",
+      "\t==> Total Yield: 1109.388\n",
+      "===== ewk_lljj_mll50_mjj120 =====\n",
+      "\tdata_yield for ewk_lljj_mll50_mjj120: 88.81001041895111\n",
+      "\t==> Total Yield: 88.810\n",
+      "===== ttjets_* =====\n",
+      "\tdata_yield for ttjets_sl: 7.719479822417006\n",
+      "\tdata_yield for ttjets_dl: 283.3227427559094\n",
+      "\t==> Total Yield: 291.042\n",
+      "\n",
+      "\n",
+      "***** 2017 *****\n",
+      "===== vbf_powheg_dipole =====\n",
+      "\tdata_yield for vbf_powheg_dipole: 0.10736833694516268\n",
+      "\t==> Total Yield: 0.107\n",
+      "===== ggh_powhegPS =====\n",
+      "\tdata_yield for ggh_powhegPS: 0.07959645111818892\n",
+      "\t==> Total Yield: 0.080\n",
+      "===== dy_VBF_filter =====\n",
+      "\tdata_yield for dy_VBF_filter: 1111.7767237718679\n",
+      "\t==> Total Yield: 1111.777\n",
+      "===== dy_M*_MiNNLO =====\n",
+      "\tdata_yield for dy_M-100To200_MiNNLO: 756.0784601736674\n",
+      "\tdata_yield for dy_M-50_MiNNLO: 11.278612315410808\n",
+      "\t==> Total Yield: 767.357\n",
+      "===== ewk_lljj_mll50_mjj120 =====\n",
+      "\tdata_yield for ewk_lljj_mll50_mjj120: 62.3080191319235\n",
+      "\t==> Total Yield: 62.308\n",
+      "===== ttjets_* =====\n",
+      "\tdata_yield for ttjets_sl: 5.53653234014935\n",
+      "\tdata_yield for ttjets_dl: 209.7846302639368\n",
+      "\t==> Total Yield: 215.321\n",
+      "\n",
+      "\n",
+      "***** 2016preVFP *****\n",
+      "===== vbf_powheg_dipole =====\n",
+      "\tdata_yield for vbf_powheg_dipole: 0.052196332374473645\n",
+      "\t==> Total Yield: 0.052\n",
+      "===== ggh_powhegPS =====\n",
+      "\tdata_yield for ggh_powhegPS: 0.040877669140844675\n",
+      "\t==> Total Yield: 0.041\n",
+      "===== dy_VBF_filter =====\n",
+      "\tdata_yield for dy_VBF_filter: 91.15413492973474\n",
+      "\t==> Total Yield: 91.154\n",
+      "===== dy_M*_MiNNLO =====\n",
+      "\tdata_yield for dy_M-100To200_MiNNLO: 260.54610019693195\n",
+      "\tdata_yield for dy_M-50_MiNNLO: 8.684400914115917\n",
+      "\t==> Total Yield: 269.231\n",
+      "===== ewk_lljj_mll50_mjj120 =====\n",
+      "\tdata_yield for ewk_lljj_mll50_mjj120: 30.578419703889825\n",
+      "\t==> Total Yield: 30.578\n",
+      "===== ttjets_* =====\n",
+      "\tdata_yield for ttjets_sl: 1.9808989564132518\n",
+      "\tdata_yield for ttjets_dl: 116.34015599189654\n",
+      "\t==> Total Yield: 118.321\n",
+      "\n",
+      "\n",
+      "***** 2016postVFP *****\n",
+      "===== vbf_powheg_dipole =====\n",
+      "\tdata_yield for vbf_powheg_dipole: 0.041580713807886596\n",
+      "\t==> Total Yield: 0.042\n",
+      "===== ggh_powhegPS =====\n",
+      "\tdata_yield for ggh_powhegPS: 0.0261341776478239\n",
+      "\t==> Total Yield: 0.026\n",
+      "===== dy_VBF_filter =====\n",
+      "\tdata_yield for dy_VBF_filter: 481.9759567565954\n",
+      "\t==> Total Yield: 481.976\n",
+      "===== dy_M*_MiNNLO =====\n",
+      "\tdata_yield for dy_M-100To200_MiNNLO: 266.4440429879637\n",
+      "\tdata_yield for dy_M-50_MiNNLO: 4.174293688162703\n",
+      "\t==> Total Yield: 270.618\n",
+      "===== ewk_lljj_mll50_mjj120 =====\n",
+      "\tdata_yield for ewk_lljj_mll50_mjj120: 25.044969512231035\n",
+      "\t==> Total Yield: 25.045\n",
+      "===== ttjets_* =====\n",
+      "\tdata_yield for ttjets_sl: 1.7873988730639763\n",
+      "\tdata_yield for ttjets_dl: 89.91295917390964\n",
+      "\t==> Total Yield: 91.700\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
-    "outfile = \"yield.csv\"\n",
+    "outfile = \"yield_MC_Default.csv\"\n",
     "years = [\"2018\", \"2017\", \"2016preVFP\", \"2016postVFP\"]\n",
     "\n",
-    "years = [\"2018\"]\n",
+    "# years = [\"2018\"]\n",
     "info = []\n",
     "for year in years:\n",
     "    print(\"{vspace}{lspace} {year} {lspace}\".format(vspace=\"\\n\\n\", lspace=\"*\"*5, year=year))\n",
     "    # load_path = f\"/depot/cms/users/shar1172/hmm/copperheadV1clean/Run2_nanoAODv12_UpdatedQGL_FixPUJetIDWgt/stage1_output/{year}/compacted\"\n",
     "    # load_path = f\"/depot/cms/hmm/shar1172/hmm_ntuples/copperheadV1clean/Run2_nanoAODv12_AK8jets/stage1_output/{year}/f1_0\"\n",
     "    load_path = f\"/depot/cms/hmm/shar1172/hmm_ntuples/copperheadV1clean/Run2_nanoAODv12_AK8jets/stage1_output/{year}/f1_0\"\n",
-    "    # getYield(\"data*\", load_path)\n",
+    "    # info.append(\n",
+    "    #     getYield(process = \"data*\", load_path = load_path, year=year, do_vbf_filter_study=False)\n",
+    "    # )\n",
     "    info.append(\n",
-    "        getYield(process = \"data*\", load_path = load_path, year=year)\n",
+    "        getYield(process = \"vbf_powheg_dipole\", load_path = load_path, year=year, do_vbf_filter_study=False)\n",
     "    )\n",
     "    info.append(\n",
-    "        getYield(process = \"vbf_powheg_dipole\", load_path = load_path, year=year)\n",
+    "        getYield(process = \"ggh_powhegPS\", load_path = load_path, year=year, do_vbf_filter_study=False)\n",
     "    )\n",
     "    info.append(\n",
-    "        getYield(process = \"ggh_powhegPS\", load_path = load_path, year=year)\n",
+    "        getYield(process = \"dy_VBF_filter\", load_path = load_path, year=year, do_vbf_filter_study=True)\n",
     "    )\n",
-    "    # getYield(\"dy_VBF_filter\", True)\n",
-    "    # getYield(\"dy_M*_MiNNLO\", True)\n",
-    "    # getYield(\"ewk_lljj_mll50_mjj120\")\n",
-    "    # getYield(\"ggh_powhegPS\", load_path)\n",
+    "    info.append(\n",
+    "        getYield(process = \"dy_M*_MiNNLO\", load_path = load_path, year=year, do_vbf_filter_study=True)\n",
+    "    )    \n",
+    "    info.append(\n",
+    "        getYield(process = \"ewk_lljj_mll50_mjj120\", load_path = load_path, year=year, do_vbf_filter_study=False)\n",
+    "    )   \n",
+    "    info.append(\n",
+    "        getYield(process = \"ttjets_*\", load_path = load_path, year=year, do_vbf_filter_study=False)\n",
+    "    )       \n",
     "    # getYield(\"st_*\")\n",
-    "    # getYield(\"ttjets_*\")\n",
     "    # getYield(\"ww_2l2nu\")\n",
     "    # getYield(\"wz_1l1nu2q\")\n",
     "    # getYield(\"wz_2l2q\")\n",
@@ -228,50 +311,6 @@
     "    writer = csv.writer(out_f)\n",
     "    writer.writerow(['sample', 'region', 'year', 'yield'])\n",
     "    writer.writerows(info)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "163c25fe-482c-4589-8d5e-a579728504fc",
-   "metadata": {},
-   "source": [
-    "# With FatJet and MET veto\n",
-    "\n",
-    "```bash\n",
-    "***** 2017 *****\n",
-    "===== data* =====\n",
-    "\tdata_yield for data_E: 475.0\n",
-    "\tdata_yield for data_C: 477.0\n",
-    "\tdata_yield for data_F: 727.0\n",
-    "\tdata_yield for data_B: 283.0\n",
-    "\tdata_yield for data_D: 201.0\n",
-    "\t==> Total Yield: 2163.000\n",
-    "===== vbf_powheg_dipole =====\n",
-    "\tdata_yield for vbf_powheg_dipole: 0.10710499408020374\n",
-    "\t==> Total Yield: 0.107\n",
-    "===== ggh_powhegPS =====\n",
-    "\tdata_yield for ggh_powhegPS: 0.07959645111818892\n",
-    "        \t==> Total Yield: 0.080\n",
-    "```\n",
-    "\n",
-    "# With default selection\n",
-    "\n",
-    "```bash\n",
-    "***** 2017 *****\n",
-    "===== data* =====\n",
-    "\tdata_yield for data_E: 491.0\n",
-    "\tdata_yield for data_C: 492.0\n",
-    "\tdata_yield for data_F: 744.0\n",
-    "\tdata_yield for data_B: 289.0\n",
-    "\tdata_yield for data_D: 206.0\n",
-    "\t==> Total Yield: 2222.000\n",
-    "===== vbf_powheg_dipole =====\n",
-    "\tdata_yield for vbf_powheg_dipole: 0.10736833694516268\n",
-    "\t==> Total Yield: 0.107\n",
-    "===== ggh_powhegPS =====\n",
-    "\tdata_yield for ggh_powhegPS: 0.07959645111818892\n",
-    "\t==> Total Yield: 0.080\n",
-    "```"
    ]
   },
   {
