--- a/quick_validation_comparison.ipynb
+++ b/quick_validation_comparison.ipynb
@@ -1851,9 +1851,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:coffea2024]",
+   "display_name": "coffea_latest",
    "language": "python",
-   "name": "conda-env-coffea2024-py"
+   "name": "coffea_latest"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1865,7 +1865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
