--- a/DaskGatewaySLURM.ipynb
+++ b/DaskGatewaySLURM.ipynb
@@ -37,7 +37,7 @@
     "print(f\"PWD: {cwd}\")\n",
     "os.environ[\"PYTHONPATH\"] += f\":{cwd}\"\n",
     "os.environ[\"X509_USER_PROXY\"] = f\"{cwd}/voms_proxy.txt\"\n",
-    "os.environ['XRD_REQUESTTIMEOUT'] = \"2400\"\n",
+    "os.environ['XRD_REQUESTTIMEOUT'] = \"300\"\n",
     "!echo $PYTHONPATH"
    ]
   },
@@ -84,9 +84,12 @@
     "    # conda_env = \"/depot/cms/kernels/coffea2024\",\n",
     "    # conda_env = \"/depot/cms/kernels/root632\",\n",
     "    # conda_env = \"/depot/cms/kernels/coffea_latest\",\n",
+    "    # conda_env = \"/depot/cms/kernels/coffea_dask\",\n",
     "    conda_env = \"/depot/cms/users/yun79/conda_envs/yun_coffea_latest\",\n",
+    "    # conda_env = \"/depot/cms/users/yun79/conda_envs/pfn_env\",\n",
     "    worker_cores = 1, #2\n",
-    "    worker_memory = 10, #6\n",
+    "    # worker_memory = 60, #6\n",
+    "    worker_memory = 55, #For data with 2500 files use 10GB workers\n",
     "    env = dict(os.environ),\n",
     ")\n",
     "\n",
